fix(theme): codeblocks always show vertical scrollbar (#1793)

--- a/src/client/theme-default/styles/components/vp-code-group.css
+++ b/src/client/theme-default/styles/components/vp-code-group.css
@@ -10,6 +10,7 @@
   padding: 0 12px;
   background-color: var(--vp-code-tab-bg);
   overflow: auto;
+  overflow-y: hidden;
 }
 
 .vp-code-group .tabs::after {
